# clox

./: .gitignore  CMakeLists.txt  README.MD  build.ps1
include/: ast.h  error.h  lexer.h  parser.h
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp
test/: CMakeLists.txt  common.hpp  lexer_test.cpp  main.cpp  parser_test.cpp
